--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus est
         suscipit totam consequuntur ipsam reiciendis, ducimus eaque culpa? Minus
-        tenetur illo dignissimos nemo minima nostrum animi earum iusto adipisci
-        vitae? Explicabo adipisci exercitationem ratione veritatis eos minima
-        libero dignissimos dicta saepe, tenetur sed maiores recusandae illum
-        animi, nisi quo laborum aut esse quibusdam harum quis hic? Natus harum
-        voluptate assumenda, reprehenderit quis commodi eveniet quod ratione
+        tenetur  reprehenderit quis commodi eveniet quod ratione
         non, aperiam obcaecati, tenetur quasi nulla cumque exercitationem
         voluptatibus aliquid repellat. Nostrum nemo fuga, sint voluptatibus
         consectetur dolor rem similique nisi in corrupti, recusandae dolores et
@@ -86,3 +82,4 @@
     </div>
   </body>
 </html>
+
